[COLOR="DeepSkyBlue"]4.4.9 (131)[/COLOR]
[LIST]
[*] Added "container_stackable" to the possible results of sptype(). This will be set for the "Unknown Master Writs" and for the "Unknown Supply Survey" containers.
[/LIST]

[COLOR="DeepSkyBlue"]4.4.8 (130)[/COLOR]:
[LIST]
[*] Converting to LibSFUtils logger wrapper to control if debug-level messages get sent to the LibDebugLogger.
[/LIST]

[COLOR="DeepSkyBlue"]4.4.7 (129)[/COLOR]:
[LIST]
[*] Update to a new version of LibMMediaProvider which changed its name and thereby broke everything that used it prior to this. Now requires the updated LibMediaProvider version 1.1.
[/LIST]

[COLOR="DeepSkyBlue"]4.4.6 (128)[/COLOR]:
[LIST]
[*] Removed debug messages that were likely causing lag.
[/LIST]

[COLOR="DeepSkyBlue"]4.4.5 (127)[/COLOR]:
[LIST]
[*] A new function [COLOR="MediumSeaGreen"]autofurniturecat()[/COLOR] specifically for use with the Furniture Vault.
[*] A new predefined rule tag="Furniture", name="ByCategory" added which uses the new autofurniturecat() to divide up the contents of your Furniture Vault by the categories (conservatory, gallery, undercroft, etc.) of the furniture that you have in it. All you need to do is to add the rule to your Furniture Vault bag with the appropriate priorities that you want.
[*] The combined naming of most automatically generated categories such as autoset(), combined_autoset(), and some of the FCOIS categories will display the category (rule) name as well as a subname in parentheses (like: Set(Mother's Sorrow)). This is controlled by the setting in the General settings called "Show 'Set(name)' for autosets". (It applies to combined_autoset() and the FCOIS categories as well.) This setting mostly ignored for the category names generated by autofurniturecat() and the rule name (and parentheses) is never displayed when it is in the Furniture Vault. If the rule is in any other bag, the rulename will be displayed with the category in parentheses.
[/LIST]
